# Deepdive_MCPServer

./: README.md  pyproject.toml
src/mcpserver/: __main__.py  deployment.py
