[project]
name = "deepdive-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.10.1",
]

[project.scripts]
add_mcp_server = "mcpserver:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {""=""src}

[tool.setuptools.packages.find]
where = ["src"]